[package]
name = "white-noise"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "a blindingly simple static site generator"

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.0", features = ["derive"] }
convert_case = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
handlebars = "4.3.4"
pulldown-cmark = { version = "0.9.2", default-features = false }
